public/assets/user-front/css/jewellery/jewellery.css
/* ... */
.category-8 .category-item img:nth-child(2) {
    -webkit-transform: translatex(0%) scalex(1);
    transform: translatex(0%) scalex(1);
    opacity: 1;
    -webkit-filter: blur(0px);
    filter: blur(0px);
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    -o-object-fit: cover;
    object-fit: cover;
    z-index: 199;
}

.category-8 .category-item .content {
    position: absolute;
    bottom: 0;
    left: 0;
    background: rgba(25, 17, 10, 0.5);
    z-index: 1;
    width: 90%;
    padding: 6px 20px;
}

.category-8 .category-item .title {
    color: var(--color-white);
    transition: all 0.3s ease-out 0s;
}

.category-8 .category-item .count {
    color: #d0d0d0;
}

.category-8 .vertical-title .title {
    writing-mode: vertical-rl;
    transform: rotate(180deg);
    text-align: left;
    font-size: 32px;
    height: 345px;
    margin: 0;
    position: relative;
}

.category-8 .vertical-title .title .line {
    content: "";
    position: absolute;
    width: 78px;
    height: 2px;
    background: var(--color-primary);
    transform: rotate(90deg);
    right: 21px;
    top: 60%;
}

@media (max-width: 1400px) {
    .category-8 .vertical-title .title {
        font-size: 24px;
        height: 223px;
    }

    .category-8 .vertical-title .title .line {
        right: 8px;
        top: 77%;
    }
}

.category-8 .category-item:hover .title {
    color: var(--color-primary);
}

.category-8 .category-item:hover img:nth-child(2) {
    -webkit-transform: translatex(-50%) scalex(2);
    transform: translatex(-50%) scalex(2);
    opacity: 0;
    -webkit-filter: blur(10px);
    filter: blur(10px);
}

.category-8 .category-item:hover img:nth-child(1) {
    -webkit-transform: translatex(0) scalex(1);
    transform: translatex(0) scalex(1);
    opacity: 1;
    -webkit-filter: blur(0);
    filter: blur(0);
}

@media (max-width: 991px) {
    .category-8 .vertical-title .title {
        font-size: 24px;
        height: 288px;
    }

    .category-8 .vertical-title .title .line {
        right: 7px;
    }
}

@media (max-width: 480px) {
    .category-8 .category-item .content {
        padding: 6px 10px;
    }

    .category-8 .category-slider {
        padding-bottom: 60px;
    }

    .category-8 .category-slider .slick-slide {
        padding-inline: 6px;
    }

    .category-8 .vertical-title {
        padding-inline-end: 10px;
    }

    .category-8 .vertical-title .title {
        writing-mode: initial;
        transform: none;
        text-align: left;
        font-size: 18px;
        height: auto;
        max-height: none;
        margin-bottom: 10px;
    }

    .category-8 .vertical-title .title .line {
        display: none;
    }
}

.left_right_slide_anim.line::before {
    animation: left_right_slide_anim 2.5s linear infinite alternate none;
    right: unset;
}

@keyframes left_right_slide_anim {
    0% {
        left: 0px;
    }

    100% {
        left: calc(100% - 5px);
    }
}

.header.header-v8 .header-top .header-right {
    text-align: right;
}

.category-slider {
    padding-bottom: 50px;
}

.category-slider .slick-dots {
    bottom: -10px;
}

/* -----------------------------------------
    Nav Tabs CSS
----------------------------------------- */
.tabs-navigation {
    background: #fff;
}

.tabs-navigation .nav-tabs {
    display: inline-flex;
    border: none;
    z-index: 1;
    position: relative;
    flex-wrap: nowrap;
    justify-content: flex-start;
    overflow: unset;
}

.tabs-navigation .nav-tabs .nav-link {
    font-size: 1rem;
    font-weight: 500;
    padding: 9px 20px;
    color: var(--bs-body-color);
    transition: all 0.4s ease;
    border: 1px solid var(--border);
    background: transparent;
    margin: 0;
    z-index: 1;
    cursor: pointer;
    background: 0;
}

.tabs-navigation .nav-tabs .nav-link.active {
    border: 1px solid var(--color-primary);
    background: var(--color-primary);
    color: var(--color-white);
}

.tabs-navigation .nav[data-hover="fancyHover"] .nav-item {
    z-index: 2;
}

.tabs-navigation .nav li {
    flex: 0 0 auto;
}

.tabs-navigation .nav .nav-link:is(.active, :hover) {
    color: var(--color-white);
    background: var(--color-primary);
    border-radius: 6px;
}

.tabs-navigation .nav[data-hover="fancyHover"] .nav-item:is(.active) .nav-link {
    color: var(--color-white);
    background: var(--color-primary) !important;
    border-radius: 6px;
}

.tabs-navigation .nav[data-hover="fancyHover"] .nav-item:is(.active) .nav-link:is(:hover) {
    background: var(--color-white);
    border: 1px solid var(--color-primary);
    border-radius: 6px;
}

.tabs-navigation .target {
    position: absolute;
    background: var(--color-primary);
    z-index: 1;
    transition: all 0.3s ease-in-out;
    border-radius: 6px;
}

.tab-pane.fade {
    transition: all 0.2s;
    transform: translateY(1rem);
}

.tab-pane.fade.show {
    transform: translateY(0rem);
}

.tabs-navigation {
    overflow: hidden;
    overflow-x: auto;
    width: 100%;
    padding-bottom: 14px;
}

/* Firefox */
.tabs-navigation {
    scrollbar-width: thin;
    scrollbar-color: rgba(var(--color-primary-rgb), 0.9) var(--color-primary);
    scroll-behavior: smooth;
}

/* Chrome, Edge, Safari */
.tabs-navigation::-webkit-scrollbar {
    height: 3px;
}

.tabs-navigation::-webkit-scrollbar-track {
    background: var(--color-primary);
    border-radius: 10px;
}

.tabs-navigation::-webkit-scrollbar-thumb {
    background: rgba(var(--color-primary-rgb), 0.9);
    border-radius: 10px;
}

.tabs-navigation::-webkit-scrollbar-thumb:hover {
    background: rgba(var(--color-primary-rgb), 1);
}

.tabs-navigation-4 .nav-tabs .nav-link {
    border-radius: 0px !important;
    color: #635658;
    border: 1px solid #dfdede;
    background: transparent;
    padding: 13px 20px;
}

.tabs-navigation-4 .target {
    border-radius: 0px !important;
}

.tabs-navigation-4 .nav[data-hover="fancyHover"] .nav-item.active .nav-link {
    border-radius: 0px !important;
}
/* ... */

